[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/Roboto/roboto_light_med.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/Roboto/roboto_regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/Lato/lato_regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Factory/FactoryComponents/simulation_controller.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.313726, 0.313726, 0.313726, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="SimulationController" type="PanelContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_picker_scene = "res://Scenes/scene_picker.tscn"
level_name_label_path = NodePath("MarginContainer/HBoxContainer/LevelNameLabel")
pause_button_path = NodePath("MarginContainer/HBoxContainer/PauseButton")
speed_scale_label_path = NodePath("MarginContainer/HBoxContainer/SpeedScaleLabel")

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 920.0
margin_bottom = 820.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 900.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="LevelNameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_right = 215.0
margin_bottom = 790.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.1
custom_fonts/font = ExtResource( 1 )
text = "Basic Factory"
align = 1
valign = 1
autowrap = true

[node name="PauseButton" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 225.0
margin_right = 441.0
margin_bottom = 790.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.1
custom_fonts/font = ExtResource( 3 )
text = "Pause"

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 451.0
margin_right = 451.0
margin_bottom = 790.0

[node name="SlowerButton" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 461.0
margin_right = 559.0
margin_bottom = 790.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 3 )
text = "<<"

[node name="SpeedScaleLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 569.0
margin_right = 628.0
margin_bottom = 790.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
custom_fonts/font = ExtResource( 2 )
text = "500x"
align = 1
valign = 1
autowrap = true

[node name="FasterButton" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 638.0
margin_right = 736.0
margin_bottom = 790.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 3 )
text = ">>"

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 746.0
margin_right = 746.0
margin_bottom = 790.0

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 756.0
margin_right = 890.0
margin_bottom = 790.0
custom_fonts/font = ExtResource( 3 )
text = "Exit to Menu"

[connection signal="pressed" from="MarginContainer/HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SlowerButton" to="." method="_on_SlowerButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/FasterButton" to="." method="_on_FasterButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
